# ftl-code-expert

./: README.md  pyproject.toml
code_expert/: cli.py  git_utils.py  topics.py
code_expert/data/: CLAUDE.md.template  SKILL.md
code_expert/prompts/: __init__.py  diff.py  spec.py
ftl_code_expert/: cli.py
ftl_code_expert/data/: SKILL.md
