[project]
name = "code-expert"
version = "0.1.0"
description = "Build expert knowledge bases from codebases"
readme = "README.md"
requires-python = ">=3.12"
dependencies = ["click>=8.0"]

[project.optional-dependencies]
embeddings = ["fastembed>=0.7.4", "numpy"]

[project.scripts]
code-expert = "code_expert.cli:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["code_expert"]
